crates/badness-parser/tests/snapshots/bib_parser__braces_protect_quote_in_quoted_value.snap
---
source: tests/bib_parser.rs
expression: "tree(r#\"@misc{k, title = \"a {\\\"} b\"}\"#)"
---
ROOT@0..28
  ENTRY@0..28
    AT@0..1 "@"
    ENTRY_TYPE@1..5
      WORD@1..5 "misc"
    L_BRACE@5..6 "{"
    KEY@6..7
      WORD@6..7 "k"
    COMMA@7..8 ","
    WHITESPACE@8..9 " "
    FIELD@9..27
      FIELD_NAME@9..14
        WORD@9..14 "title"
      WHITESPACE@14..15 " "
      EQ@15..16 "="
      WHITESPACE@16..17 " "
      VALUE@17..27
        QUOTED@17..27
          QUOTE@17..18 "\""
          WORD@18..19 "a"
          WHITESPACE@19..20 " "
          BRACE_GROUP@20..24
            L_BRACE@20..21 "{"
            WORD@21..22 "\\"
            QUOTE@22..23 "\""
            R_BRACE@23..24 "}"
          WHITESPACE@24..25 " "
          WORD@25..26 "b"
          QUOTE@26..27 "\""
    R_BRACE@27..28 "}"
