crates/badness-parser/tests/snapshots/bib_parser__comment_between_value_and_comma.snap
---
source: crates/badness-parser/tests/bib_parser.rs
expression: "tree(\"@online{k,\\n  keywords =\\n    {contributor}\\n  %\\n  ,}\")"
---
ROOT@0..50
  ENTRY@0..50
    AT@0..1 "@"
    ENTRY_TYPE@1..7
      WORD@1..7 "online"
    L_BRACE@7..8 "{"
    KEY@8..9
      WORD@8..9 "k"
    COMMA@9..10 ","
    NEWLINE@10..11 "\n"
    WHITESPACE@11..13 "  "
    FIELD@13..41
      FIELD_NAME@13..21
        WORD@13..21 "keywords"
      WHITESPACE@21..22 " "
      EQ@22..23 "="
      NEWLINE@23..24 "\n"
      WHITESPACE@24..28 "    "
      VALUE@28..41
        BRACE_GROUP@28..41
          L_BRACE@28..29 "{"
          WORD@29..40 "contributor"
          R_BRACE@40..41 "}"
    NEWLINE@41..42 "\n"
    WHITESPACE@42..44 "  "
    COMMENT@44..45
      PERCENT@44..45 "%"
    NEWLINE@45..46 "\n"
    WHITESPACE@46..48 "  "
    COMMA@48..49 ","
    R_BRACE@49..50 "}"
