crates/badness-parser/tests/snapshots/bib_parser__comment_eats_the_rest_of_a_bare_value_line.snap
---
source: crates/badness-parser/tests/bib_parser.rs
expression: "tree(\"@misc{k, month = nov % and the comma,\\n  , year = 2020}\")"
---
ROOT@0..54
  ENTRY@0..54
    AT@0..1 "@"
    ENTRY_TYPE@1..5
      WORD@1..5 "misc"
    L_BRACE@5..6 "{"
    KEY@6..7
      WORD@6..7 "k"
    COMMA@7..8 ","
    WHITESPACE@8..9 " "
    FIELD@9..20
      FIELD_NAME@9..14
        WORD@9..14 "month"
      WHITESPACE@14..15 " "
      EQ@15..16 "="
      WHITESPACE@16..17 " "
      VALUE@17..20
        LITERAL@17..20
          WORD@17..20 "nov"
    WHITESPACE@20..21 " "
    COMMENT@21..37
      PERCENT@21..22 "%"
      WHITESPACE@22..23 " "
      WORD@23..26 "and"
      WHITESPACE@26..27 " "
      WORD@27..30 "the"
      WHITESPACE@30..31 " "
      WORD@31..36 "comma"
      COMMA@36..37 ","
    NEWLINE@37..38 "\n"
    WHITESPACE@38..40 "  "
    COMMA@40..41 ","
    WHITESPACE@41..42 " "
    FIELD@42..53
      FIELD_NAME@42..46
        WORD@42..46 "year"
      WHITESPACE@46..47 " "
      EQ@47..48 "="
      WHITESPACE@48..49 " "
      VALUE@49..53
        LITERAL@49..53
          NUMBER@49..53 "2020"
    R_BRACE@53..54 "}"
