crates/badness-parser/tests/snapshots/bib_parser__missing_equals.snap
---
source: tests/bib_parser.rs
expression: "tree(\"@misc{k, title {v}}\")"
---
ROOT@0..19
  ENTRY@0..18
    AT@0..1 "@"
    ENTRY_TYPE@1..5
      WORD@1..5 "misc"
    L_BRACE@5..6 "{"
    KEY@6..7
      WORD@6..7 "k"
    COMMA@7..8 ","
    WHITESPACE@8..9 " "
    FIELD@9..15
      FIELD_NAME@9..14
        WORD@9..14 "title"
      WHITESPACE@14..15 " "
    FIELD@15..16
      L_BRACE@15..16 "{"
    FIELD@16..17
      FIELD_NAME@16..17
        WORD@16..17 "v"
    R_BRACE@17..18 "}"
  JUNK@18..19
    R_BRACE@18..19 "}"
error @15..16: expected `=` after the field name
error @15..16: expected a field name
error @17..18: expected `=` after the field name
