crates/badness-parser/tests/snapshots/bib_parser__unterminated_quote.snap
---
source: tests/bib_parser.rs
expression: "tree(r#\"@misc{k, title = \"unclosed}\"#)"
---
ROOT@0..27
  ENTRY@0..27
    AT@0..1 "@"
    ENTRY_TYPE@1..5
      WORD@1..5 "misc"
    L_BRACE@5..6 "{"
    KEY@6..7
      WORD@6..7 "k"
    COMMA@7..8 ","
    WHITESPACE@8..9 " "
    FIELD@9..27
      FIELD_NAME@9..14
        WORD@9..14 "title"
      WHITESPACE@14..15 " "
      EQ@15..16 "="
      WHITESPACE@16..17 " "
      VALUE@17..27
        QUOTED@17..27
          QUOTE@17..18 "\""
          WORD@18..26 "unclosed"
          R_BRACE@26..27 "}"
error @27..27: unterminated `"`
error @27..27: unterminated entry
